<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">Gabriela </string>
    <string name="last_name">Liera</string>
    <string name="full_name">Gabriela Liera</string>

    <string name="profile_bio_text">I\'m a career pivoter with a degree in Anthropology. I\'m currently studying computer programming at Mt. San Antonio College. I'm most proficient in Java. </string>

    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">🥇 Games Boards</string>
    <string name="profile_hobby_second_text">🥈 Cat Videos</string>
    <string name="profile_hobby_third_text">🥉 Concerts</string>
</resources>